{
  "version": 4,
  "terraform_version": "1.8.3",
  "serial": 321,
  "lineage": "8cfce64a-9d2c-4a34-1dc2-624945177f55",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "Nat-Gateway-EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09e136163b8d420cf",
            "arn": "arn:aws:ec2:us-east-2:955014749105:elastic-ip/eipalloc-09e136163b8d420cf",
            "association_id": "eipassoc-0e5104c8067f8f7a5",
            "domain": "vpc",
            "id": "eipalloc-09e136163b8d420cf",
            "network_border_group": "us-east-2",
            "network_interface": "eni-098953c5623bc50a1",
            "private_dns": "ip-10-2-0-201.us-east-2.compute.internal",
            "private_ip": "10.2.0.201",
            "public_dns": "ec2-3-17-248-28.us-east-2.compute.amazonaws.com",
            "public_ip": "3.17.248.28",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:955014749105:internet-gateway/igw-0999db06c60660ec1",
            "id": "igw-0999db06c60660ec1",
            "owner_id": "955014749105",
            "tags": {
              "Name": "demo-igw"
            },
            "tags_all": {
              "Name": "demo-igw"
            },
            "vpc_id": "vpc-0c9233768a9d003f7"
          },
          "dependencies": [
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NAT_GATEWAY",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09e136163b8d420cf",
            "association_id": "eipassoc-0e5104c8067f8f7a5",
            "connectivity_type": "public",
            "id": "nat-042cb00df1f57a1d9",
            "network_interface_id": "eni-098953c5623bc50a1",
            "private_ip": "10.2.0.201",
            "public_ip": "3.17.248.28",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-040a19bdd05a7d574",
            "tags": {
              "Name": "Nat-Gateway_Project"
            },
            "tags_all": {
              "Name": "Nat-Gateway_Project"
            }
          },
          "dependencies": [
            "aws_eip.Nat-Gateway-EIP",
            "aws_subnet.public_subnet",
            "aws_vpc.demo",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:955014749105:route-table/rtb-0093881f30b3f3fa5",
            "id": "rtb-0093881f30b3f3fa5",
            "owner_id": "955014749105",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-042cb00df1f57a1d9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private-RT"
            },
            "tags_all": {
              "Name": "Private-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c9233768a9d003f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.Nat-Gateway-EIP",
            "aws_nat_gateway.NAT_GATEWAY",
            "aws_subnet.public_subnet",
            "aws_vpc.demo",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:955014749105:route-table/rtb-0fd59f322c45bc1c5",
            "id": "rtb-0fd59f322c45bc1c5",
            "owner_id": "955014749105",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0999db06c60660ec1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public-RT"
            },
            "tags_all": {
              "Name": "Public-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c9233768a9d003f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08411acc10598c9fe",
            "route_table_id": "rtb-0093881f30b3f3fa5",
            "subnet_id": "subnet-04cb38a72b33a4b98"
          },
          "dependencies": [
            "aws_eip.Nat-Gateway-EIP",
            "aws_nat_gateway.NAT_GATEWAY",
            "aws_route_table.private",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.demo",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ac5cda71f87a28a6",
            "route_table_id": "rtb-0093881f30b3f3fa5",
            "subnet_id": "subnet-082a524b284b0b007"
          },
          "dependencies": [
            "aws_eip.Nat-Gateway-EIP",
            "aws_nat_gateway.NAT_GATEWAY",
            "aws_route_table.private",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.demo",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04a66ba1301d3f6a7",
            "route_table_id": "rtb-0093881f30b3f3fa5",
            "subnet_id": "subnet-00c309579168c0f6b"
          },
          "dependencies": [
            "aws_eip.Nat-Gateway-EIP",
            "aws_nat_gateway.NAT_GATEWAY",
            "aws_route_table.private",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.demo",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ede5cf054bfb23ac",
            "route_table_id": "rtb-0fd59f322c45bc1c5",
            "subnet_id": "subnet-040a19bdd05a7d574"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_subnet",
            "aws_vpc.demo",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fd671acceae3b31a",
            "route_table_id": "rtb-0fd59f322c45bc1c5",
            "subnet_id": "subnet-05e4bb68f78b75902"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_subnet",
            "aws_vpc.demo",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09bca5718edf0ade2",
            "route_table_id": "rtb-0fd59f322c45bc1c5",
            "subnet_id": "subnet-0fa69d28835993aa1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_subnet",
            "aws_vpc.demo",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "asg_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:955014749105:security-group/sg-0b94be00e6f3c609a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b94be00e6f3c609a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_ssh_http2",
            "name_prefix": "",
            "owner_id": "955014749105",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c9233768a9d003f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:955014749105:subnet/subnet-04cb38a72b33a4b98",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.2.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04cb38a72b33a4b98",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "955014749105",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "arunops-PrivateSubnet-1"
            },
            "tags_all": {
              "Name": "arunops-PrivateSubnet-1"
            },
            "vpc_id": "vpc-0c9233768a9d003f7"
          },
          "dependencies": [
            "aws_vpc.demo",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:955014749105:subnet/subnet-082a524b284b0b007",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.2.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-082a524b284b0b007",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "955014749105",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "arunops-PrivateSubnet-2"
            },
            "tags_all": {
              "Name": "arunops-PrivateSubnet-2"
            },
            "vpc_id": "vpc-0c9233768a9d003f7"
          },
          "dependencies": [
            "aws_vpc.demo",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:955014749105:subnet/subnet-00c309579168c0f6b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.2.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00c309579168c0f6b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "955014749105",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "arunops-PrivateSubnet-3"
            },
            "tags_all": {
              "Name": "arunops-PrivateSubnet-3"
            },
            "vpc_id": "vpc-0c9233768a9d003f7"
          },
          "dependencies": [
            "aws_vpc.demo",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:955014749105:subnet/subnet-040a19bdd05a7d574",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.2.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-040a19bdd05a7d574",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "955014749105",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "arunops-PublicSubnet-1"
            },
            "tags_all": {
              "Name": "arunops-PublicSubnet-1"
            },
            "vpc_id": "vpc-0c9233768a9d003f7"
          },
          "dependencies": [
            "aws_vpc.demo",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:955014749105:subnet/subnet-05e4bb68f78b75902",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.2.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05e4bb68f78b75902",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "955014749105",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "arunops-PublicSubnet-2"
            },
            "tags_all": {
              "Name": "arunops-PublicSubnet-2"
            },
            "vpc_id": "vpc-0c9233768a9d003f7"
          },
          "dependencies": [
            "aws_vpc.demo",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:955014749105:subnet/subnet-0fa69d28835993aa1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.2.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fa69d28835993aa1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "955014749105",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "arunops-PublicSubnet-3"
            },
            "tags_all": {
              "Name": "arunops-PublicSubnet-3"
            },
            "vpc_id": "vpc-0c9233768a9d003f7"
          },
          "dependencies": [
            "aws_vpc.demo",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:955014749105:vpc/vpc-0c9233768a9d003f7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-06081178c52982db8",
            "default_route_table_id": "rtb-0b67fa7e4f6cb3b8b",
            "default_security_group_id": "sg-08879f3544e9ec735",
            "dhcp_options_id": "dopt-0457d001dd21e4ca9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c9233768a9d003f7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b67fa7e4f6cb3b8b",
            "owner_id": "955014749105",
            "tags": {
              "Name": "my_vpc",
              "env": "dev"
            },
            "tags_all": {
              "Name": "my_vpc",
              "env": "dev"
            }
          }
        }
      ]
    }
  ]
}